2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2010-08-15	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* Makefile.am: Do not use .rel files for libbsp pieces.

2010-03-10	Marc Pignat <marc.pignat@hevs.ch>

	PR 1488/bsps
	* start/start.S: Micromon on bf537 uses DMA for UART reception.
	This prevents the UART driver in RTEMS from working (and also
	causes received characters to be stored in a buffer that RTEMS
	doesn't know about, so it's potentially dangerous, but in practice
	the risk is small since an RTEMS app intended to be booted from
	Micromon would normally be configured to leave the RAM Micromon
	uses reserved).  The attached patch corrects this by disabling
	all DMA channels at startup.

2009-12-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/console-io.c: Let bf537Stamp_BSP_poll_char return int.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/bf537Stamp.cfg: Remove RTEMS_BSP_FAMILY.

2009-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Don't add -ansi -fasm to CFLAGS.

2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/bf537Stamp.cfg: New (relocated from /make/custom).

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.

 2009-08-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/bsp.h: Eliminate BSPs defining NUMBER_OF_TERMIOS_PORTS.
	Should be automatically handled by confdefs.h or the application.

2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Rename BSP_BOOTCARD_OPTIONS to
	RTEMS_BSP_BOOTCARD_OPTIONS. Add RTEMS_BSP_CLEANUP_OPTIONS so all BSPs
	have the same options.

2009-05-25	Allan Hessenflow <allanh@kallisti.com>

	* start/start.S: Correct call to boot_card to meet bfin abi by
	clearing l0 - l3 and allocating some stack space.

2009-05-25	Allan Hessenflow <allanh@kallisti.com>

	PR 1418/bsps